Derniers correctifs + readme

--- a/src/main/webapp/resources/Personalisation/stylesheet.css
+++ b/src/main/webapp/resources/Personalisation/stylesheet.css
@@ -58,3 +58,12 @@
     color: white;
     font-size: large;
 }
+
+.catDisplay{
+	display : inline-block;
+	text-align:center;
+	width : 320px;
+    margin-left: 20px;
+    margin-right: 20px;
+
+}
